--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 Flask==0.10.1
 Jinja2==2.7.2
 MarkupSafe==0.18
+WTForms==1.0.5
 Werkzeug==0.9.4
 argparse==1.2.1
+flask-peewee==0.6.5
 gunicorn==18.0
+ipython==1.1.0
 itsdangerous==0.23
+peewee==2.1.7
 wsgiref==0.1.2
+wtf-peewee==0.2.2
