--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 nguage: python
 python:
         - "2.7"
-command to install dependencies
+#command to install dependencies
 install:
     - pip install -r requirements.txt
 
