--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ MarkupSafe==0.18
 WTForms==1.0.5
 Werkzeug==0.9.4
 argparse==1.2.1
+arnold==0.3.3
 flask-peewee==0.6.5
 gunicorn==18.0
 ipython==1.1.0
 itsdangerous==0.23
 peewee==2.1.7
+termcolor==1.1.0
 wsgiref==0.1.2
 wtf-peewee==0.2.2
