--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
-nguage: python
+language: python
 python:
-        - "2.7"
-#command to install dependencies
+    - "2.7"
+# command to install dependencies
 install:
     - pip install -r requirements.txt
-
 script: true
+# whitelist
+branches:
+    only:
+        - master
+        - develop
