modif for coverall

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 # command to install dependencies
 install:
     - pip install -r requirements.txt
+    - pip install coverage coveralls
 script: true
 # whitelist
 branches:
