--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
 - '2.7'
 install:
-    - pip install -r --allow-all-external requirements.txt 
+    - pip install -r requirements.txt --allow-all-external 
     - pip install coverage coveralls
 script: true
 branches:
