--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==0.10.1
+Flask-SQLAlchemy==1.0
 Jinja2==2.7.2
 MarkupSafe==0.18
+SQLAlchemy==0.9.3
 WTForms==1.0.5
 Werkzeug==0.9.4
 argparse==1.2.1
@@ -9,6 +11,7 @@ gunicorn==18.0
 ipython==1.1.0
 itsdangerous==0.23
 peewee==2.1.7
+psycopg2==2.5.2
 termcolor==1.1.0
 wsgiref==0.1.2
 wtf-peewee==0.2.2
