--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==0.10.1
+Flask-Admin==1.0.7
 Flask-SQLAlchemy==1.0
 Jinja2==2.7.2
 MarkupSafe==0.18
@@ -6,12 +7,9 @@ SQLAlchemy==0.9.3
 WTForms==1.0.5
 Werkzeug==0.9.4
 argparse==1.2.1
-flask-peewee==0.6.5
 gunicorn==18.0
 ipython==1.1.0
 itsdangerous==0.23
-peewee==2.1.7
 psycopg2==2.5.2
 termcolor==1.1.0
 wsgiref==0.1.2
-wtf-peewee==0.2.2
