--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 Flask==0.10.1
 Flask-Admin==1.0.7
+Flask-Migrate==1.2.0
 Flask-SQLAlchemy==1.0
+Flask-Script==0.6.7
 Jinja2==2.7.2
+Mako==0.9.1
 MarkupSafe==0.18
 SQLAlchemy==0.9.3
 WTForms==1.0.5
 Werkzeug==0.9.4
+alembic==0.6.4
 argparse==1.2.1
 gunicorn==18.0
 ipython==1.1.0
